fixed sidebar alignment to center

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,13 +3,41 @@
   margin: 0;
   padding: 0;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 html,
-body {
+body,
+#__next,
+#root {
   height: 100%;
 }
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Noto Sans KR", sans-serif;
+}
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+  border: 0 none;
 }
 #app {
   height: 100%;
